# lz4b

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  Makefile  README.md  rebar.config
.github/workflows/: erlang.yml
c_src/: CMakeLists.txt  Makefile  lz4b.c  lz4b.h
ebin/: .gitignore
include/: lz4b_frame.hrl
src/: lz4b.app.src  lz4b_app.erl  lz4b_config.erl  lz4b_frame.erl  lz4b_nif.erl
test_data/: bible.txt.lz4  helloworld.lz4  helloworld_cksum.lz4  large  large.lz4  large_txt.lz4
